# VMware-Policy

./: .coverage  .gitignore  README-CN.md  README.md  RELEASE_NOTES.md  config.example.yaml  pyproject.toml  server.json
docs/: version-strategy.md
examples/mcp-configs/: claude-code.json
skills/vmware-policy/: SKILL.md
skills/vmware-policy/references/: capabilities.md  cli-reference.md  setup-guide.md
tests/: test_audit.py  test_decorators.py  test_policy.py  test_sanitize.py
vmware_policy/: __init__.py  audit.py  cli.py  decorators.py  policy.py  rules_default.yaml  sanitize.py
