[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vmware-policy"
version = "1.4.4"
description = "Unified audit logging, policy enforcement, and sanitization for VMware MCP skills"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Wei Zhou / 周崴" }]
dependencies = [
    "typer>=0.12,<1.0",
    "rich>=13.0,<15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10.0",
    "pytest-cov>=5.0,<8.0",
    "ruff>=0.5,<1.0",
]

[project.scripts]
vmware-audit = "vmware_policy.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["vmware_policy"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
]
